added name and image url fields.  also changed formatting

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -13,9 +13,19 @@
     <div class="container">
 
         <form>
+            <h2>About You</h2>
+            <div class="form-group">
+                <label for="name">Name (required)</label>
+                <input type="text" class="form-control" id="name">
+            </div>
+            <div class="form-group">
+                <label for="image-url">Image URL (required)</label>
+                <input type="text" class="form-control" id="image-url">
+            </div>
+            <h2>Questions</h2>
             <ol>
-                <li>
-                    You find it easy to stay relaxed even when there is some pressure.<br>
+                <h4><li>
+                    You find it easy to stay relaxed even when there is some pressure.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionOne" id="q1rad1" value="strong-dis">
                         <label class="form-check-label" for="q1rad1">Strongly Disagree</label>
@@ -37,8 +47,8 @@
                         <label class="form-check-label" for="q1rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    You rarely do something just out of sheer curiosity<br>
+                <h4><li>
+                    You rarely do something just out of sheer curiosity<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionTwo" id="q2rad1" value="strong-dis">
                         <label class="form-check-label" for="q2rad1">Strongly Disagree</label>
@@ -60,8 +70,8 @@
                         <label class="form-check-label" for="q2rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    Being organized is more important than being adaptable.<br>
+                <h4><li>
+                    Being organized is more important than being adaptable.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionThree" id="q3rad1" value="strong-dis">
                         <label class="form-check-label" for="q3rad1">Strongly Disagree</label>
@@ -83,8 +93,8 @@
                         <label class="form-check-label" for="q3rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    Winning a debate matters less to you than making sure nobody gets upset.<br>
+                <h4><li>
+                    Winning a debate matters less to you than making sure nobody gets upset.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionFour" id="q4rad1" value="strong-dis">
                         <label class="form-check-label" for="q4rad1">Strongly Disagree</label>
@@ -106,8 +116,8 @@
                         <label class="form-check-label" for="q4rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    You do not mind being at the center of attention.<br>
+                <h4><li>
+                    You do not mind being at the center of attention.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionFive" id="q5rad1" value="strong-dis">
                         <label class="form-check-label" for="q5rad1">Strongly Disagree</label>
@@ -129,8 +139,8 @@
                         <label class="form-check-label" for="q5rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    Your travel plans are usually well thought out.<br>
+                <h4><li>
+                    Your travel plans are usually well thought out.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionSix" id="q6rad1" value="strong-dis">
                         <label class="form-check-label" for="q6rad1">Strongly Disagree</label>
@@ -152,8 +162,8 @@
                         <label class="form-check-label" for="q6rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    People can rarely upset you.<br>
+                <h4><li>
+                    People can rarely upset you.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionSeven" id="q7rad1" value="strong-dis">
                         <label class="form-check-label" for="q7rad1">Strongly Disagree</label>
@@ -175,8 +185,8 @@
                         <label class="form-check-label" for="q7rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    An interesting book or video game is often better than a social event.<br>
+                <h4><li>
+                    An interesting book or video game is often better than a social event.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionEight" id="q8rad1" value="strong-dis">
                         <label class="form-check-label" for="q8rad1">Strongly Disagree</label>
@@ -198,8 +208,8 @@
                         <label class="form-check-label" for="q8rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    You believe it is more rewarding to be liked by others than it is to be powerful.<br>
+                <h4><li>
+                    You believe it is more rewarding to be liked by others than it is to be powerful.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionNine" id="q9rad1" value="strong-dis">
                         <label class="form-check-label" for="q9rad1">Strongly Disagree</label>
@@ -221,8 +231,8 @@
                         <label class="form-check-label" for="q9rad5">Strongly Agree</label>
                     </div>
                 </li>
-                <li>
-                    You are ususally highly motivated and energetic.<br>
+                <h4><li>
+                    You are ususally highly motivated and energetic.<br></h4>
                     <div class="form-check form-check-inline">
                         <input class="form-check-input" type="radio" name="questionTen" id="q10rad1" value="strong-dis">
                         <label class="form-check-label" for="q10rad1">Strongly Disagree</label>
