--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -255,6 +255,7 @@
                     </div>
                 </li>
             </ol>
+            <button class="btn btn-primary" type="submit">Submit</button>
         </form>
     </div>
 </body>
