added api routes; added submit button to survey

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,7 @@
             <p class="lead">
                 Complete the following survey, and we will find you a compatable Friend
             </p>
-            <a class="btn btn-primary btn-lg" href="survey.html" role="button">Take Survey</a>
+            <a class="btn btn-primary btn-lg" href="/survey" role="button">Take Survey</a>
         </div>
         <p><a href="/api/friendsList">API Friends List</a> | <a href="https://github.com/pellegrinisr/friendFinder">Git Repo</a></p>
     </div>
