wrote event handler for submit button

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqEDisagree1rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
@@ -35,7 +35,7 @@
                         <label class="form-check-label" for="q1rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionOne" id="q1rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionOne" id="q1rad3" value="3" checked>
                         <label class="form-check-label" for="q1rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -58,7 +58,7 @@
                         <label class="form-check-label" for="q2rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionTwo" id="q2rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionTwo" id="q2rad3" value="3" checked>
                         <label class="form-check-label" for="q2rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -81,7 +81,7 @@
                         <label class="form-check-label" for="q3rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionThree" id="q3rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionThree" id="q3rad3" value="3" checked>
                         <label class="form-check-label" for="q3rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -104,7 +104,7 @@
                         <label class="form-check-label" for="q4rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionFour" id="q4rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionFour" id="q4rad3" value="3" checked>
                         <label class="form-check-label" for="q4rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -127,7 +127,7 @@
                         <label class="form-check-label" for="q5rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionFive" id="q5rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionFive" id="q5rad3" value="3" checked>
                         <label class="form-check-label" for="q5rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -150,7 +150,7 @@
                         <label class="form-check-label" for="q6rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionSix" id="q6rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionSix" id="q6rad3" value="3" checked>
                         <label class="form-check-label" for="q6rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -173,7 +173,7 @@
                         <label class="form-check-label" for="q7rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionSeven" id="q7rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionSeven" id="q7rad3" value="3" checked>
                         <label class="form-check-label" for="q7rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -196,7 +196,7 @@
                         <label class="form-check-label" for="q8rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionEight" id="q8rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionEight" id="q8rad3" value="3" checked>
                         <label class="form-check-label" for="q8rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -219,7 +219,7 @@
                         <label class="form-check-label" for="q9rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionNine" id="q9rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionNine" id="q9rad3" value="3" checked>
                         <label class="form-check-label" for="q9rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -242,7 +242,7 @@
                         <label class="form-check-label" for="q10rad2">Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="questionTen" id="q10rad3" value="3">
+                        <input class="form-check-input" type="radio" name="questionTen" id="q10rad3" value="3" checked>
                         <label class="form-check-label" for="q10rad3">Neither Agree Nor Disagree</label>
                     </div>
                     <div class="form-check form-check-inline">
@@ -255,8 +255,38 @@
                     </div>
                 </li>
             </ol>
-            <button class="btn btn-primary" type="submit">Submit</button>
+            <button class="btn btn-primary" type="submit" id="btnSubmit">Submit</button>
         </form>
     </div>
+    <script>
+        $('#btnSubmit').on('click', function(event) {
+            event.preventDefault();
+            var name = $('#name').val().trim();
+            var photoUrl = $('#image-url').val().trim();
+            var questionArray = [
+                parseInt($('input[name="questionOne"]:checked').val()),
+                parseInt($('input[name="questionTwo"]:checked').val()),
+                parseInt($('input[name="questionThree"]:checked').val()),
+                parseInt($('input[name="questionFour"]:checked').val()),
+                parseInt($('input[name="questionFive"]:checked').val()),
+                parseInt($('input[name="questionSix"]:checked').val()),
+                parseInt($('input[name="questionSeven"]:checked').val()),
+                parseInt($('input[name="questionEight"]:checked').val()),
+                parseInt($('input[name="questionNine"]:checked').val()),
+                parseInt($('input[name="questionTen"]:checked').val())
+            ];
+
+            var newPerson = {
+                name: name,
+                photo: photoUrl,
+                scores: questionArray
+            };
+
+            $.post('/api/friends', newPerson, function(data) {
+                console.log(data);
+                console.log('Thanks, ' + name + ', you have been added.')
+            });
+        });
+    </script>
 </body>
 </html>
