--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqEDisagree1rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <style>
+        #bottom-p {
+            margin-top: 1rem;
+        }
+        #nameError, #urlError, #error-message {
+            color: red;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -15,11 +24,11 @@
         <form>
             <h2>About You</h2>
             <div class="form-group">
-                <label for="name">Name (required)</label>
+                <label for="name">Name (required)</label><span id="nameError">Name cannot be blank.</span>
                 <input type="text" class="form-control" id="name">
             </div>
             <div class="form-group">
-                <label for="image-url">Image URL (required)</label>
+                <label for="image-url">Image URL (required)</label><span id="urlError">Image cannot be blank.</span>
                 <input type="text" class="form-control" id="image-url">
             </div>
             <h2>Questions</h2>
@@ -255,37 +264,56 @@
                     </div>
                 </li>
             </ol>
-            <button class="btn btn-primary" type="submit" id="btnSubmit">Submit</button>
+            <button class="btn btn-primary" type="submit" id="btnSubmit">Submit</button><span class="pl-3" id="error-message">Name and Image Url are required.</span>
         </form>
+        <p id="bottom-p"><a href="/api/friends">API Friends List</a> | <a href="https://github.com/pellegrinisr/friendFinder">Git Repo</a></p>
     </div>
     <script>
         $('#btnSubmit').on('click', function(event) {
             event.preventDefault();
-            var name = $('#name').val().trim();
-            var photoUrl = $('#image-url').val().trim();
-            var questionArray = [
-                parseInt($('input[name="questionOne"]:checked').val()),
-                parseInt($('input[name="questionTwo"]:checked').val()),
-                parseInt($('input[name="questionThree"]:checked').val()),
-                parseInt($('input[name="questionFour"]:checked').val()),
-                parseInt($('input[name="questionFive"]:checked').val()),
-                parseInt($('input[name="questionSix"]:checked').val()),
-                parseInt($('input[name="questionSeven"]:checked').val()),
-                parseInt($('input[name="questionEight"]:checked').val()),
-                parseInt($('input[name="questionNine"]:checked').val()),
-                parseInt($('input[name="questionTen"]:checked').val())
-            ];
+            var name = $('#name').val();
+            var photoUrl = $('#image-url').val();
+            var isValid = true;
+            //error checking
+            if (!name) {
+                $('#nameError').css('display', 'inline');
+                isValid = false;
+            }
+            if (!photoUrl) {
+                $('#urlError').css('display', 'inline');
+                isValid = false;
+            } 
+            if (isValid) {
+                $('#urlError').css('display', 'none');
+                $('#nameError').css('display', 'none');
+                $("#error-message").css('display', 'none');
+                name = name.trim();
+                photoUrl = photoUrl.trim();
+                var questionArray = [
+                    $('input[name="questionOne"]:checked').val(),
+                    $('input[name="questionTwo"]:checked').val(),
+                    $('input[name="questionThree"]:checked').val(),
+                    $('input[name="questionFour"]:checked').val(),
+                    $('input[name="questionFive"]:checked').val(),
+                    $('input[name="questionSix"]:checked').val(),
+                    $('input[name="questionSeven"]:checked').val(),
+                    $('input[name="questionEight"]:checked').val(),
+                    $('input[name="questionNine"]:checked').val(),
+                    $('input[name="questionTen"]:checked').val()
+                ];
 
-            var newPerson = {
-                name: name,
-                photo: photoUrl,
-                scores: questionArray
-            };
+                var newPerson = {
+                    name: name,
+                    photo: photoUrl,
+                    scores: questionArray
+                };
 
-            $.post('/api/friends', newPerson, function(data) {
-                console.log(data);
-                console.log('Thanks, ' + name + ', you have been added.')
-            });
+                $.post('/api/friends', newPerson, function(data) {
+                    console.log(data);
+                });
+            } else {
+                $('#error-message').css('display', 'inline');
+            }
         });
     </script>
 </body>
