--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqEDisagree1rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <style>
-        #bottom-p {
-            margin-top: 1rem;
-        }
         #nameError, #urlError, #error-message {
             color: red;
             display: none;
@@ -266,7 +263,22 @@
             </ol>
             <button class="btn btn-primary" type="submit" id="btnSubmit">Submit</button><span class="pl-3" id="error-message">Name and Image Url are required.</span>
         </form>
-        <p id="bottom-p"><a href="/api/friends">API Friends List</a> | <a href="https://github.com/pellegrinisr/friendFinder">Git Repo</a></p>
+        <p class="mt-3"><a href="/api/friends">API Friends List</a> | <a href="https://github.com/pellegrinisr/friendFinder">Git Repo</a></p>
+    </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Your Match</h5>
+                </div>
+                <div class="modal-body">
+                    <!-- data -->
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
         $('#btnSubmit').on('click', function(event) {
@@ -309,7 +321,12 @@
                 };
 
                 $.post('/api/friends', newPerson, function(data) {
-                    console.log(data);
+                    console.log(data); 
+                    var name = $('<h6>').html(data.name);
+                    var picture = $('<img>').attr('src', data.photo);
+                    console.log(picture);
+                    $('.modal-body').append(name).append(picture);
+                    $('#exampleModal').modal('show');
                 });
             } else {
                 $('#error-message').css('display', 'inline');
